--- a/srcs/requirements/frontend/src/components/home/Home.css
+++ b/srcs/requirements/frontend/src/components/home/Home.css
@@ -1,5 +1,6 @@
-.Home
+.baground
 {
+  /* baground */
   background-image: url("../../img/background.gif");
   position: absolute;
   min-width: 1280px;
@@ -9,4 +10,75 @@
   left: 0px;
   top: 0px;
   background-size: cover;
+}
+
+.containerRectangle
+{
+  /* rectangle */
+  position: absolute;
+  height:100%;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.rectangleLeftTopRight
+{
+  position: absolute;
+  width: 73%;
+  height: 78%;
+  min-height: 656px;
+  min-width: 1079px;
+  box-sizing: border-box;
+
+  /* color */
+  /* border-width: 4px 4px 0px 4px;
+  border-style: solid;
+  border-color: #FFFFFF;*/
+  /* neon */
+  /*box-shadow: inset 0px 0px 10px 4px #f975ed, 0px 0px 10px 4px #f975ed;
+  clip-path: inset(-5px -5px 0px -5px);
+  clip-path: inset(-5px -5px 0px -5px); */
+}
+.rectangleRight, .rectangleTop, .rectangleBottomLeft, .rectangleBottomRight, .rectangleLeft
+{
+  position: absolute;
+  background-color: #FFFFFF;
+  box-shadow: inset 0px 0px 20px 4px #f975ed, 0px 0px 20px 4px #f975ed;
+}
+
+.rectangleTop
+{
+  bottom:100%;
+  height: 4px;
+  width: 100%;
+}
+
+.rectangleRight
+{
+  height: 100%;
+  width: 4px;
+}
+
+.rectangleLeft
+{
+  bottom: 0px;
+  height: 100%;
+  width: 4px;
+}
+
+.rectangleBottomLeft
+{
+  bottom: 0px;
+  height: 4px;
+  width: 42.6%;
+}
+
+.rectangleBottomRight
+{
+  bottom: 0px;
+  left: 60%;
+  height: 4px;
+  width: 40%;
 }
