--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -270,6 +270,26 @@
 	flex-grow: 0;
 }
 
+.avatar
+{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 5px;
+	gap: 10px;
+
+	width: 175px;
+	height: 42px;
+
+	border-radius: 15px;
+
+	/* Inside auto layout */
+
+	flex: none;
+	align-self: auto;
+	flex-grow: 0;
+}
+
 .settings-container .select-settings
 {
 	display: flex;
