--- a/srcs/requirements/frontend/src/components/home/Home.css
+++ b/srcs/requirements/frontend/src/components/home/Home.css
@@ -79,8 +79,14 @@
 .containerHeader
 {
   min-height: 132px;
-  width: 100%;
+  width: 100;
   height: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 50px;
+  /* background-color: white; */
 }
 
 .containerCenter
