--- a/srcs/requirements/frontend/src/components/home/header/NameLeft/css/Name.css
+++ b/srcs/requirements/frontend/src/components/home/header/NameLeft/css/Name.css
@@ -21,26 +21,16 @@
     min-width: 280px;
 }
 
-.brushTop
-{
-    background-image: url(../../img/brush1.png);
-    top: 0px;
-}
-
-.brushBot
-{
-    background-image: url(../../img/brush2.png);
-    top:80%;
-}
-
 .containerRoseName
 {
     min-width: 275.28px;
     min-height: 100px;
-    background: linear-gradient(90.94deg, rgba(213, 61, 156, 0.72) -2.85%, #71DFFF 113.66%);
-    border-radius: 25px; 
+    /* background: linear-gradient(90.94deg, rgba(213, 61, 156, 0.72) -2.85%, #71DFFF 113.66%); */
+    background-color: rgba(0, 0, 0, 0.8);
     height: 80%;
     width: 90%;
+    border-radius: 10px;
+    border: 3px solid rgba(255, 255, 255, 0.5);
 
     display: flex;
     flex-direction: column;
@@ -62,6 +52,7 @@
     min-width: 210px;
     width: 80%;
     height: 42%;
+    margin-left: 15px;
 }
 
 .nameText
@@ -72,10 +63,18 @@
     align-items: center;
     text-align: center;
 
-    /* font-size: 35px; */
-    font-size:4vh;
     text-shadow:
     0 0 10px #fff,
     0 0 42px white;
-    font-size:calc(32px + 1.5vh);
+    /* font-size:calc(32px + 1.5vh); */
+    transition: text-shadow 0.3s ease;
+}
+
+.nameText:hover
+{ 
+    text-shadow:
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 42px #fff,
+    0 0 70px white;
 }
