--- a/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
+++ b/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
@@ -19,7 +19,7 @@
 {
     min-height: 40px;
     min-width: 40px;
-    background-image: url(../../../../../img/navBar/returnLogo.png);
+    background-image: url(../../../../../assets/img/navBar/returnLogo.png);
     background-size: cover;
     margin-left: 30px;
 }
@@ -28,7 +28,7 @@
 {
     min-height: 40px;
     min-width: 40px;
-    background-image: url(../../../../../img/navBar/menu.png);
+    background-image: url(../../../../../assets/img/navBar/menu.png);
     background-size: cover;
 }
 
@@ -36,7 +36,7 @@
 {
     min-height: 40px;
     min-width: 40px;
-    background-image: url(../../../../../img/navBar/logOut.png);
+    background-image: url(../../../../../assets/img/navBar/logOut.png);
     background-size: cover;
 }
 
@@ -44,7 +44,7 @@
 {
     min-height: 80px;
     min-width: 80px;
-    background-image: url(../../../../../img/navBar/avatar.png);
+    background-image: url(../../../../../assets/img/navBar/avatar.png);
     background-size: cover;
     margin-right: 30px;
 }
