--- a/srcs/requirements/frontend/src/components/popup/Font.css
+++ b/srcs/requirements/frontend/src/components/popup/Font.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;800&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;700&display=swap");
 
