--- a/srcs/requirements/frontend/src/components/home/header/NameLeft/css/Name.css
+++ b/srcs/requirements/frontend/src/components/home/header/NameLeft/css/Name.css
@@ -68,6 +68,7 @@
     0 0 42px white;
     /* font-size:calc(32px + 1.5vh); */
     transition: text-shadow 0.3s ease;
+    cursor: pointer;
 }
 
 .nameText:hover
