--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -141,12 +141,30 @@
 	
 	border: 0.5px solid #FFFFFF;
 	border-radius: 5px;
-
-	flex: none;
-	align-self: stretch;
-	flex-grow: 0;
 }
 
+.btn-little
+{
+	background-color: transparent;
+	border: 0.5px solid #FFFFFF;
+	border-radius: 15px;
+}
+
+.btn:hover, .btn-little:hover
+{
+	background-color: rgba(0, 255, 255, 0.30);
+	filter: drop-shadow(0px 0px 2px white);
+	box-shadow: inset 0px ,0px ,0px, 5px red;
+}
+
+.password-input
+{
+	padding: 5px 15px;
+	gap: 10px;
+	background: rgba(255, 255, 255, 0.25);
+	border-radius: 10px;
+	
+}
 
 /*------------------------------------------------------*/
 
@@ -275,5 +293,24 @@
 	
 	flex: none;
 	order: 1;
+	flex-grow: 0;
+}
+
+.password
+{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 0px 11px;
+	gap: 5px;
+
+	width: 417px;
+	height: 32px;
+
+
+	/* Inside auto layout */
+
+	flex: none;
+	order: 0;
 	flex-grow: 0;
 }
