--- a/srcs/requirements/frontend/src/components/home/Home.css
+++ b/srcs/requirements/frontend/src/components/home/Home.css
@@ -85,7 +85,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 50px;
+  padding: 10px 4%;
 }
 
 .containerCenter
