--- a/srcs/requirements/frontend/src/components/home/Home.css
+++ b/srcs/requirements/frontend/src/components/home/Home.css
@@ -1,6 +1,6 @@
 .baground
 {
-  background-image: url("../../assets/img/background.gif");
+  background-image: url("../../img/background.gif");
   position: absolute;
   min-width: 1280px;
   min-height: 832px;
