--- a/srcs/requirements/frontend/src/components/home/play/css/Play.css
+++ b/srcs/requirements/frontend/src/components/home/play/css/Play.css
@@ -14,10 +14,15 @@
     gap:10%
 }
 
+.containerPlay:hover
+{
+    cursor: pointer;
+}
+
 .playTxt
 {
     color:white;
-    font-size:12vh;
+    font-size:9vh;
     font-weight: 700;
     text-shadow:
     0 0 10px #fff,
@@ -25,7 +30,7 @@
     transition: text-shadow 0.3s ease;
     cursor: pointer;
     margin-bottom: 0%;
-    margin-top: 0%;
+    margin-top: 4%;
 }
 
 .playTxt:hover
@@ -44,9 +49,8 @@
     padding-bottom: 10%;
     background-size: contain;
     background-repeat: no-repeat;
-    height: 8vh;
-    width: 8vh;
-    cursor: pointer;
+    height: 7vh;
+    width: 7vh;
     filter: drop-shadow(0px 0px 5px white);
     transition: box-shadow 0.3s ease;
 }
