--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -56,14 +56,27 @@
 	border-radius: 10px;	
 }
 
+.password-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+}  
+
+.password {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+}
+  
+
 .password
 {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	padding: 0px 11px;
-	gap: 5px;
+	gap: 0.5rem;
 
 	width: 417px;
 	height: 32px;
 }
+
