--- a/srcs/requirements/frontend/src/css/Text.css
+++ b/srcs/requirements/frontend/src/css/Text.css
@@ -8,6 +8,20 @@
 	-webkit-text-stroke: 0.5px #f975ed;
 }
 
+.red
+{
+	font-weight: 300;
+	font-family: 'Montserrat', sans-serif;
+	color: #FF0000;
+}
+
+.green
+{
+	font-weight: 300;
+	font-family: 'Montserrat', sans-serif;
+	color: #00FF00;
+}
+
 .text
 {
 	font-weight: 300;
@@ -70,4 +84,28 @@
 					0 0 92px #f975ed,
 					0 0 102px #f975ed,
 	  				0 0 151px #f975ed;
+}
+
+.neon-red {
+	text-shadow:
+					0 0 7px #ff0000,
+					0 0 10px #ff0000,
+					0 0 21px #ff0000,
+					0 0 42px #ff0000,
+	  				0 0 82px #ff0000,
+					0 0 92px #ff0000,
+					0 0 102px #ff0000,
+	  				0 0 151px #ff0000;
+}
+
+.neon-green {
+	text-shadow:
+					0 0 7px #00ff00,
+					0 0 10px #00ff00,
+					0 0 21px #00ff00,
+					0 0 42px #00ff00,
+	  				0 0 82px #00ff00,
+					0 0 92px #00ff00,
+					0 0 102px #00ff00,
+	  				0 0 151px #00ff00;
 }
