--- a/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
+++ b/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
@@ -25,11 +25,17 @@
     filter: drop-shadow(0px 0px 5px white);
     transition: filter 0.3s ease;
     cursor: pointer;
+    transition: all 0.1s ease-in-out;
 }
 
 .returnLogo:hover, .menueLogo:hover, .logoutLogo:hover
 {
     filter: drop-shadow(0px 0px 15px white);
+}
+
+.returnLogo:active, .menueLogo:active, .logoutLogo:active, .avatar:active
+{
+    transform: scale(0.9);
 }
 
 .returnLogo
@@ -61,6 +67,7 @@
     transition: drop-shadow 0.3s ease;
     filter: drop-shadow(0px 0px 5px white);
     cursor: pointer;
+    transition: all 0.1s ease-in-out;
 }
 
 .avatar:hover
