--- a/srcs/requirements/frontend/src/components/home/menue/css/Menue.css
+++ b/srcs/requirements/frontend/src/components/home/menue/css/Menue.css
@@ -20,7 +20,7 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -36,13 +36,15 @@
 
 .friendLogo, .statLogo, .leaderLogo, .settingsLogo, .chatLogo, .historicLogo
 {
-    min-height: 40px;
-    min-width: 40px;
-    height: 3.5vh;
-    width: 3.5vh;
-    background-size: cover;
+    /* min-height: 40px;
+    min-width: 40px; */
+    height: 100%;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
     filter: drop-shadow(0px 0px 5px white);
     transition: filter 0.3s ease;
+    background-position: center;
 }
 
 .friendLogo
@@ -78,6 +80,26 @@
 .friendTxt, .statTxt, .leaderTxt, .chatTxt, .historicTxt, .settingsTxt
 {
     color: white;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    text-shadow:
+    0 0 10px #fff,
+    0 0 42px white;
+}
+
+.containerFriend:hover .friendTxt, .containerStat:hover .statTxt, .containerLeader:hover .leaderTxt, .containerChat:hover .chatTxt, .containerHistoric:hover .historicTxt, .containerSettings:hover .settingsTxt
+{
+    text-shadow:
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 42px #fff,
+    0 0 70px white;
+}
+
+.containerFriend:hover .friendLogo, .containerStat:hover .statLogo, .containerLeader:hover .leaderLogo, .containerChat:hover .chatLogo, .containerHistoric:hover .historicLogo, .containerSettings:hover .settingsLogo
+{
+    filter: drop-shadow(0px 0px 15px white);
 }
 
 .containerFriend, .containerStat, .containerLeader, .containerHistoric, .containerChat, .containerSettings
@@ -87,4 +109,29 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    min-height: 100px;
+    min-width: 100px;
+    transition: all 0.1s ease-in-out;
+    width: 20%;
+    height: 80%;
+}
+
+.containerFriend:active, .containerStat:active, .containerLeader:active, .containerHistoric:active, .containerChat:active, .containerSettings:active
+{
+    transform: scale(0.9);
+}
+
+.containerTop
+{
+    padding-top: 5%;
+}
+
+.containerFriend, .containerSettings
+{
+    padding-left:5%;
+}
+
+.containerLeader, .containerHistoric
+{
+   padding-right: 5%; 
 }
