--- a/srcs/requirements/frontend/src/components/home/play/css/Play.css
+++ b/srcs/requirements/frontend/src/components/home/play/css/Play.css
@@ -11,8 +11,28 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:10%
+    gap:10%;
 }
+
+.containerPlay:active .playButton
+{
+    transform: scale(0.9);
+}
+
+.containerPlay:hover .playButton
+{
+    filter: drop-shadow(0px 0px 15px white);
+}
+
+.containerPlay:hover .playTxt
+{
+    text-shadow:
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 42px #fff;
+    transform: scale(1.1);
+}
+
 
 .containerPlay:hover
 {
@@ -22,7 +42,7 @@
 .playTxt
 {
     color:white;
-    font-size:9vh;
+    font-size: calc(30px + 7vh);
     font-weight: 700;
     text-shadow:
     0 0 10px #fff,
@@ -31,14 +51,6 @@
     cursor: pointer;
     margin-bottom: 0%;
     margin-top: 4%;
-}
-
-.playTxt:hover
-{ 
-    text-shadow:
-    0 0 10px #fff,
-    0 0 20px #fff,
-    0 0 42px #fff;
 }
 
 .playButton
@@ -53,9 +65,4 @@
     width: 7vh;
     filter: drop-shadow(0px 0px 5px white);
     transition: box-shadow 0.3s ease;
-}
-
-.playButton:hover
-{
-    filter: drop-shadow(0px 0px 15px white);
 }
