--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -1,3 +1,15 @@
+.center
+{
+	top: 10%;
+	position: absolute;
+	min-height: 507px;
+	height: 80%;
+	width: 90%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
 .display-settings
 {
 	display: flex;
