--- a/srcs/requirements/frontend/src/components/friend/list/css/friend.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/friend.css
@@ -1,5 +1,4 @@
-.containerFriend
-{
+.containerFriends {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -9,8 +8,7 @@
     padding: 0px 4%;
 }
 
-.containerLeft
-{
+.containerLeft {
     min-width: 775px;
     min-height: 457px;
     background-color: white;
@@ -22,8 +20,7 @@
     justify-content: space-between;
 }
 
-.containerSearchHeader
-{
+.containerSearchHeader {
     width: 100%;
     min-height: 75px;
     background-color: blue;
@@ -33,8 +30,7 @@
     justify-content: space-between
 }
 
-.containerSearch
-{
+.containerSearch {
     width: 80%;
     height: 100%;
     background-color: brown;
@@ -44,8 +40,7 @@
     justify-content: space-between
 }
 
-.containerAddFriend
-{
+.containerAddFriend {
     width: 15%;
     height: 100%;
     background-color: brown;
