--- a/srcs/requirements/frontend/src/components/friend/list/css/friend.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/friend.css
@@ -9,34 +9,35 @@
 }
 
 .containerLeft {
-    min-height: 457px;
-    background-color: white;
+    min-height: 57px;
     height: 83%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .containerSearchHeader {
-    width: 100%;
-    min-height: 75px;
-    background-color: blue;
+    width: 99%;
+    min-height: 12%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .containerSearch {
     width: 83%;
     height: 100%;
-    background-color: brown;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .containerAddFriend {
@@ -46,19 +47,58 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .containerFriendBody {
     width: 100%;
-    height: 100%;
+    height: 84%;
     display: flex;
     align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
+    /* background-color: white; */
 }
 
 .containerFriendBodyLeft {
     width: 70%;
-    background-color: blueviolet;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    overflow-x: visible;
+    gap: 10px;
+}
+
+.loopButton {
+    min-height: 45px;
+    min-width: 47px;
+    height: 3.5vh;
+    width: 3.6vh;
+    background-size: cover;
+    filter: drop-shadow(0px 0px 5px white);
+    transition: filter 0.3s ease;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    background-image: url(../../../../img/loop.png);
+    margin-right: 6%;
+}
+
+.loopButton:hover {
+    filter: drop-shadow(0px 0px 15px white);
+}
+
+.loopButton:active {
+    transform: scale(0.9);
+}
+
+.inputFriend {
+    width: 80%;
+    margin-left: 2%;
+    height: 60%;
+    border-radius: 10px;
+    font-size: 2.5vh;
+    box-shadow: inset 0 0 7px black;
+    background-color: rgba(255, 255, 255, 0.9);
+    text-indent: 3%;
 }
