--- a/srcs/requirements/frontend/src/components/friend/list/css/FriendOnlget.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/FriendOnlget.css
@@ -9,6 +9,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
     border: 3px solid rgba(255, 255, 255, 0.5);
+    cursor: pointer;
 }
 
 .containerTextFriendName {
@@ -32,6 +33,6 @@
     width: 25%;
     display: flex;
     flex-direction: row;
-    align-items: end;
-    justify-content: end;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
