--- a/srcs/requirements/frontend/src/components/friend/list/css/FriendAdd.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/FriendAdd.css
@@ -13,4 +13,16 @@
 .containerAddFriendInside {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.containerAddFriendBody {
+    width: 97%;
+    height: 82%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    border: 3px solid rgba(255, 255, 255, 0.5)
 }
