--- a/srcs/requirements/frontend/src/components/friend/list/css/FriendAdd.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/FriendAdd.css
@@ -7,7 +7,7 @@
     padding-top: 3%;
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.5)
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .containerAddFriendInside {
@@ -24,5 +24,10 @@
     height: 82%;
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
-    border: 3px solid rgba(255, 255, 255, 0.5)
+    border: 3px solid rgba(255, 255, 255, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px
 }
