--- a/srcs/requirements/frontend/src/components/friend/list/css/FriendReqOnglet.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/FriendReqOnglet.css
@@ -9,24 +9,51 @@
 
 .containerCheck {
     height: 100%;
-    width: 35%;
-    background-color: brown;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 5px;
 }
 
-.noButton {
+.noButton,
+.bloqueButton,
+.yesButton {
     min-height: 22px;
     min-width: 22px;
-    height: 3.5vh;
-    width: 3.6vh;
     background-size: cover;
     filter: drop-shadow(0px 0px 5px white);
     transition: filter 0.3s ease;
     cursor: pointer;
     transition: all 0.1s ease-in-out;
-    background-image: url(../../../../img/croix.png);
+}
+
+.yesButton {
+    background-image: url(../../../../img/yes.png);
+    min-height: 36px;
+    min-width: 32px;
+}
+
+.bloqueButton {
+    background-image: url(../../../../img/bloque.png);
+    min-height: 30px;
     margin-right: 6%;
+    min-width: 32px;
+}
+
+.noButton {
+    background-image: url(../../../../img/croix.png);
+}
+
+.noButton:hover,
+.bloqueButton:hover,
+.yesButton:hover {
+    filter: drop-shadow(0px 0px 15px white);
+}
+
+.noButton:active,
+.bloqueButton:active,
+.yesButton:active {
+    transform: scale(0.9);
 }
