--- a/srcs/requirements/frontend/src/components/friend/list/css/friend.css
+++ b/srcs/requirements/frontend/src/components/friend/list/css/friend.css
@@ -157,12 +157,14 @@
 }
 
 .addFriendLogo:hover,
-.mailLogo:hover {
+.mailLogo:hover,
+.mailLogo2:hover {
     filter: drop-shadow(0px 0px 15px white);
 }
 
 .addFriendLogo:active,
-.mailLogo:active {
+.mailLogo:active,
+.mailLogo2:active {
     transform: scale(0.9);
 }
 
