--- a/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
+++ b/srcs/requirements/frontend/src/components/home/header/NavBar/css/NavBar.css
@@ -59,18 +59,19 @@
 {
     min-height: 80px;
     min-width: 80px;
-    background-image: url(../../../../../img/navBar/avatar.png);
     background-size: cover;
+	background-position: center;
     margin-right: 30px;
     height: 7vh;
     width: 7vh;
     transition: drop-shadow 0.3s ease;
-    filter: drop-shadow(0px 0px 5px white);
+    filter: drop-shadow(0px 0px 5px white) drop-shadow(0px 0px 10px white);
     cursor: pointer;
     transition: all 0.1s ease-in-out;
+    border-radius: 50%;
 }
 
 .avatar:hover
 {
-    filter: drop-shadow(0px 0px 15px white);
+    filter: drop-shadow(0px 0px 15px white) drop-shadow(0px 0px 15px white);
 }
