--- a/srcs/requirements/frontend/src/components/Login/Login.css
+++ b/srcs/requirements/frontend/src/components/Login/Login.css
@@ -48,3 +48,73 @@
 	width: 20%;
 	height: 20%; 
 }
+
+.avatar
+{
+    min-height: 80px;
+    min-width: 80px;
+    background-size: cover;
+	background-position: center;
+    margin-right: 30px;
+    height: 7vh;
+    width: 7vh;
+    transition: drop-shadow 0.3s ease;
+    filter: drop-shadow(0px 0px 5px white) drop-shadow(0px 0px 10px white);
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    border-radius: 50%;
+}
+
+.avatar {
+    min-height: 100px; 
+    min-width: 100px;
+    background-size: cover;
+    background-position: center;
+    margin-right: 30px;
+    height: 12vh; 
+    width: 12vh; 
+    transition: drop-shadow 0.3s ease;
+    filter: drop-shadow(0px 0px 5px white) drop-shadow(0px 0px 10px white);
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    border-radius: 70%;
+}
+
+.container {
+	height: 70%;
+	width: 30%;
+	background-color: rgba(0, 0, 0, 0.8);
+	border-radius: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-weight: 1000;
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+	text-align: center;
+	text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+	padding: 20px;
+  }
+  
+.form {
+	width: 80%;
+	margin: 20px 0;
+  }
+  
+.button {
+	background-color: rgba(255, 255, 255, 0.1);
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border: 2px solid white;
+	border-radius: 4px;
+	box-shadow: 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan;
+	text-shadow: 0 0 5px white, 0 0 10px cyan;
+  }
+  
