continue setting of game login

--- a/srcs/requirements/frontend/src/components/Login/Login.css
+++ b/srcs/requirements/frontend/src/components/Login/Login.css
@@ -65,7 +65,7 @@
     border-radius: 50%;
 }
 
-.avatar {
+.avatar-login {
     min-height: 100px; 
     min-width: 100px;
     background-size: cover;
