--- a/srcs/requirements/frontend/src/components/Login/Login.css
+++ b/srcs/requirements/frontend/src/components/Login/Login.css
@@ -12,11 +12,11 @@
 	border: 1px solid #ff00ea;
 	padding: 5px;
 	box-shadow: 0 0 5px #ff00f2, 0 0 5px #f700ff, 0 0 5px #ea00ff, 0 0 40px #ea00ff;
-	color: #ffffff; /* White text */
-	text-align: center; /* Centered text */
-	font-weight: bold; /* Bold text */
+	color: #ffffff;
+	text-align: center;
+	font-weight: bold;
 	font-size: larger;
-	text-shadow: 0 0 5px #ea00ff, 0 0 10px #ea00ff; /* Neon effect */
+	text-shadow: 0 0 5px #ea00ff, 0 0 10px #ea00ff;
   }
 
   .neon-button {
@@ -105,16 +105,36 @@
 .button {
 	background-color: rgba(255, 255, 255, 0.1);
 	color: white;
+	border: none;
 	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
 	margin: 4px 2px;
 	cursor: pointer;
-	border: 2px solid white;
-	border-radius: 4px;
+	border-radius: 10px;
+	font-weight: bolder;
+	font-size: large;
 	box-shadow: 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan;
-	text-shadow: 0 0 5px white, 0 0 10px cyan;
+	text-shadow: 0 0 5px cyan, 0 0 10px cyan;
   }
-  
+
+.button:hover {
+	background-color: rgba(0, 255, 255, 0.4);
+	box-shadow: 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan;
+  }
+
+.input
+  {
+	  padding: 5px;
+	  background: rgba(255, 255, 255, 0.25);
+	  border-radius: 10px;
+	  border: none;
+	  margin: 20px;
+	  color: white;
+	  font-weight: bolder;
+	  font-size: large;
+	  text-shadow: 0 0 5px #ea00ff, 0 0 10px #ea00ff, 0 0 10px #ea00ff;
+	  text-align: center;
+	  box-shadow: 0 0 5px #ff00f2, 0 0 5px #f700ff, 0 0 5px #ea00ff, 0 0 40px #ea00ff;
+  }
