--- a/srcs/requirements/frontend/src/components/home/play/css/Queue.css
+++ b/srcs/requirements/frontend/src/components/home/play/css/Queue.css
@@ -1,9 +1,6 @@
 .containerQueue {
     width: 90%;
     height: 90%;
-    /* background: rgba(0, 0, 0, 0.6);
-    border: 4px solid;
-    border-radius: 15px;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -106,7 +103,7 @@
     height: 90%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     background: rgba(0, 0, 0, 0.6);
@@ -123,6 +120,30 @@
     font-size: 70px;
     font-weight: 700;
     color: black;
+    text-shadow:
+        0 0 10px #fff,
+        0 0 42px white;
+}
+
+.containerQ {
+    height: 70%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.headerBotQ {
+    font-weight: 700;
+    color: white;
+    font-size: 45px;
+    height: 30%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
     text-shadow:
         0 0 10px #fff,
         0 0 42px white;
