--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -92,3 +92,30 @@
 	height: 32px;
 }
 
+/* input de l'avatar : */
+.hide-input {
+	height: 0;
+	overflow: hidden;
+	width: 0;
+	position: absolute;
+  }
+
+/* range input */
+.neon-range {
+	background-color: transparent;
+	width: 100%;
+	height: 10px;
+	border-radius: 5px;
+	outline: none;
+	box-shadow: 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed;
+	-webkit-appearance: none;
+  }
+
+  .neon-range::-webkit-slider-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background-color: #f975ed;
+	box-shadow: 0 0 10px #f975ed, 0 0 20px #f975ed, 0 0 30px #f975ed, 0 0 40px #f975ed;
+	-webkit-appearance: none;
+  }
