--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -60,29 +60,15 @@
 	box-shadow: inset 0px ,0px ,0px, 5px red;
 }
 
-.password-input
+.username-input
 {
-	padding: 5px 15px;
-	gap: 10px;
-	background: rgba(255, 255, 255, 0.25);
-	border-radius: 10px;	
-}
-
-.password-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1rem;
-}
-  
-.password
-{
-	display: flex;
-	align-items: center;
-	gap: 0.5rem;
-
-	width: 417px;
-	height: 32px;
+    padding: 5px 15px;
+    gap: 10px;
+    background: rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    text-align: center;
+    color: #f975ed;
+    text-shadow: 0 0 5px #f975ed, 0 0 10px #f975ed;
 }
 
 /* input de l'avatar : */
@@ -100,7 +86,7 @@
 	height: 10px;
 	border-radius: 5px;
 	outline: none;
-	box-shadow: 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed;
+	box-shadow: 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan;
 	-webkit-appearance: none;
 	max-width: 30%;
 	margin: 20px auto;
@@ -110,7 +96,29 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
-	background-color: #f975ed;
-	box-shadow: 0 0 10px #f975ed, 0 0 20px #f975ed, 0 0 30px #f975ed, 0 0 40px #f975ed;
+	background-color: cyan;
+	box-shadow: 0 0 10px cyan, 0 0 20px cyan, 0 0 30px cyan, 0 0 40px cyan;
 	-webkit-appearance: none;
+  }
+
+  .button-username {
+	background-color: rgba(255, 255, 255, 0.1);
+	color: white;
+	border: none;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 10px;
+	font-weight: bolder;
+	font-size: large;
+	box-shadow: 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed, 0 0 10px #f975ed;
+	text-shadow: 0 0 5px #f975ed, 0 0 10px #f975ed;
+  }
+
+.button-username:hover {
+	background-color: rgb(255, 123, 226, 0.5);
+	box-shadow: 0 0 15px #f975ed, 0 0 15px #f975ed, 0 0 15px #f975ed, 0 0 15px #f975ed;
   }
