--- a/srcs/requirements/frontend/src/css/Text.css
+++ b/srcs/requirements/frontend/src/css/Text.css
@@ -76,9 +76,9 @@
 
 .neon-purple {
 	text-shadow:
-					0 0 7px #fff,
-					0 0 10px #fff,
-					0 0 21px #fff,
+					0 0 7px #f975ed,
+					0 0 10px #f975ed,
+					0 0 21px #f975ed,
 					0 0 42px #f975ed,
 	  				0 0 82px #f975ed,
 					0 0 92px #f975ed,
