--- a/srcs/requirements/frontend/src/css/Text.css
+++ b/srcs/requirements/frontend/src/css/Text.css
@@ -74,6 +74,18 @@
 	  				0 0 151px #40ddff;
 }
 
+.neon-yellow {
+	text-shadow:
+					0 0 7px #ffe600,
+					0 0 10px #ffe600,
+					0 0 21px #ffe600,
+					0 0 42px #ffe600,
+	  				0 0 82px #ffe600,
+					0 0 92px #ffe600,
+					0 0 102px #ffe600,
+	  				0 0 151px #ffe600;
+}
+
 .neon-purple {
 	text-shadow:
 					0 0 7px #f975ed,
