--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -143,7 +143,8 @@
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	margin: 4px 2px;
+	margin: 0px 50px; 
+	margin-top: 15px;
 	cursor: pointer;
 	border-radius: 10px;
 	font-weight: bolder;
