--- a/srcs/requirements/frontend/src/components/Login/Login.css
+++ b/srcs/requirements/frontend/src/components/Login/Login.css
@@ -80,6 +80,15 @@
     border-radius: 70%;
 }
 
+.avatar-select {
+    height: 100px; 
+    width: 100px;
+    background-size: cover;
+    background-position: center;
+    filter: drop-shadow(0px 0px 5px white) drop-shadow(0px 0px 10px white);
+    border-radius: 70%;
+}
+
 .container {
 	height: 70%;
 	width: 30%;
@@ -95,6 +104,24 @@
 	text-align: center;
 	text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
 	padding: 20px;
+  }
+
+  .container-avatar {
+	height: 85%;
+	width: 32%;
+	background-color: rgba(0, 0, 0, 0.8);
+	border-radius: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-weight: 1000;
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+	text-align: center;
+	text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+	padding: 20px;
+	gap: 2px
   }
   
 .form {
@@ -124,6 +151,43 @@
 	box-shadow: 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan;
   }
 
+.button-avatar {
+	background-color: rgba(255, 255, 255, 0.1);
+	color: white;
+	border: none;
+	padding: 9px 32px;
+	text-align: center;
+	margin: 4px 2px;
+	margin-top: 10px;
+	cursor: pointer;
+	border-radius: 10px;
+	font-weight: bolder;
+	font-size: large;
+	box-shadow: 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan, 0 0 10px cyan;
+	text-shadow: 0 0 5px cyan, 0 0 10px cyan;
+  }
+
+.button-avatar:hover {
+	background-color: rgba(0, 255, 255, 0.4);
+	box-shadow: 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan, 0 0 15px cyan;
+  }
+
+.btn-little-avatar
+  {
+	  background-color: transparent;
+	  border: 0.5px solid #FFFFFF;
+	  border-radius: 15px;
+	  padding: 2px 10px;
+	  margin: 5px;
+  }
+
+.btn-little-avatar:hover
+  {
+	  background-color: rgba(0, 255, 255, 0.4);
+	  filter: drop-shadow(0px 0px 2px cyan);
+  }
+
+
 .input
   {
 	  padding: 5px;
@@ -143,5 +207,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 10px;
 }
+
+.skip-button {
+	padding: 10px;
+}
+
+.error-message {
+	margin-top: 5px;
+	margin-bottom: 0px;
+  }
