--- a/srcs/requirements/frontend/src/components/home/play/css/Game.css
+++ b/srcs/requirements/frontend/src/components/home/play/css/Game.css
@@ -38,3 +38,49 @@
     display: grid;
     grid-template: repeat(10, 1fr) / repeat(20, 1fr);
 }
+
+.containerGameOver
+{
+    min-width: 460px;
+    min-height: 250px;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 27vh;
+    width: 35%;
+    border: 3px solid rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:10%;
+    /* animation: slideInRight 0.5s forwards; */
+}
+
+
+.gameoverText
+{
+    color:white;
+    font-size: calc(30px + 7vh);
+    font-weight: 700;
+    text-shadow:
+    0 0 10px #fff,
+    0 0 42px white;
+    transition: text-shadow 0.3s ease;
+    cursor: pointer;
+    margin-bottom: 0%;
+    margin-top: 4%;
+}
+
+.tryagainButton
+{
+    min-height: 40px;
+    min-width: 65px;
+    background-image: url(../../../../img/play/play.png);
+    padding-bottom: 10%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 7vh;
+    width: 7vh;
+    filter: drop-shadow(0px 0px 5px white);
+    transition: box-shadow 0.3s ease;
+}
