--- a/srcs/requirements/frontend/src/components/chat/ChatRoom.css
+++ b/srcs/requirements/frontend/src/components/chat/ChatRoom.css
@@ -22,7 +22,7 @@
 }
 .salonButton {
 	align-self: center;
-	color : #fff;
+	color : #fff; 	font-weight: 600;
 	border: 3px solid #0ff;
 	border-radius: 10px;
 	background-color: #000;
@@ -34,7 +34,7 @@
 }
 .blockedButton {
 	align-self: center;
-	color : #fff;
+	color : #fff; 	font-weight: 600;
 	border: 3px solid #e00;
 	border-radius: 10px;
 	background-color: #000;
@@ -46,7 +46,7 @@
 }
 .friendsButton {
 	align-self: center;
-	color : #fff;
+	color : #fff; 	font-weight: 600;
 	border: 3px solid #f0f;
 	border-radius: 10px;
 	background-color: #000;
@@ -73,7 +73,7 @@
 }
 
 .EntryUser {
-	color: #fff; font-size: 18px; padding: 5px;
+	font-size: 18px; padding: 5px; font-weight: 800;
 	cursor: pointer;
 	transition: text-shadow 0.2s;
 }
@@ -81,3 +81,52 @@
 	/* box-shadow: 0 0 40px #fff; */
 	text-shadow: 0 0 10px #fff, 0 0 40px #fff;
 }
+
+.popupMsg {
+	width: 40%; height : 15%; max-width: 400px; max-height: 200px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border: 2px solid #fff; background-color: #000;
+	padding: 10px;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+}
+.popupMsgText {
+	align-self: center;
+	color: #fff;
+	font-size: 24px;
+	text-shadow: 0 0 10px #fff, 0 0 40px #fff;
+}
+.closeMsg {
+	cursor: pointer;
+	font-size: 50px;
+	color : #e0e;
+	text-shadow: 0 0 10px #e0e, 0 0 40px #e0e;
+	cursor: pointer;
+}
+
+
+/* //     const popupStyle : CSSProperties = {
+	//         width: '50%', height : '15%',
+	//         position: 'fixed',
+	//         top: '50%',
+	//         left: '50%',
+	//         transform: 'translate(-50%, -50%)',
+	//         border: '2px solid #fff', backgroundColor: '#000',
+	//         padding: '10px',
+	//         borderRadius: '5px',
+
+	//         color: '#fff', fontWeight: '800', fontSize: '36px',
+	//         display: 'flex',
+	//         flexDirection: 'column',
+	//         justifyContent: 'flex-start',
+	//         alignItems: 'center',
+	//     }
+	//     const closePopup : CSSProperties = {
+	//         cursor: 'pointer',
+	//         fontSize: '50px',
+	//         color: '#fff',
+	//     } */
